logger with level, configman bugfix(empty line issue)

--- a/tests/aji.conf
+++ b/tests/aji.conf
@@ -7,13 +7,18 @@
 # illegal!
 # One line should not longer than 61 characters
 # including CR LF / LF
+
 [section_name]
+
 strval = "I'm Mamacat!" # no escape character support
 intval = 61616
 doubleval = 616.16
+charval = 'S'
       yet_another_str_val    =    "ChRiS!"   # hOi!
 # spaces inside section tag will also be term
+
 [ section array ] 
+   
 arrayval = [
     123
     456
