update makefile script

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 # libaji
 CC = gcc
-CFLAGS = -c -O3 -I../include/
+CFLAGS = -c -O3 -std=c11 -D_POSIX_C_SOURCE -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED -I../include/
 
 libaji.a: configman.o logger.o threadpool.o
 	ar -rv libaji.a configman.o logger.o threadpool.o
